...
                                <rect key="frame" x="183" y="-18" width="92" height="185"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="lblLeftScreenText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="systemRedColor"/>
...
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <color key="backgroundColor" systemColor="systemRedColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="txtDemo"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                                <rect key="frame" x="119" y="169" width="177" height="59"/>
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <accessibility key="accessibilityConfiguration" identifier="btnDemo" label="Submit"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="filled" title="Submit"/>
...
                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                                <accessibility key="accessibilityConfiguration" identifier="btnBottom" label="Bottom"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="tinted" title="Bottom"/>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="btnHarry" label="Harry"/>
                                                        <color key="tintColor" systemColor="labelColor"/>
                                                        <state key="normal" title="Button"/>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="btnRon" label="Ron"/>
                                                        <color key="tintColor" systemColor="labelColor"/>
                                                        <state key="normal" title="Button"/>
...
                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="btnHermione" label="Hermione"/>
                                                        <color key="tintColor" systemColor="labelColor"/>
                                                        <state key="normal" title="Button"/>
...
                                <rect key="frame" x="177" y="-35" width="265" height="185"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="lblRightScreenText"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="systemRedColor"/>
...
